[YUNIKORN-959] Simplify partition info in the REST call (#101)
Closes: #101

Signed-off-by: Craig Condit <ccondit@apache.org>

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Nodes</div>
-      <div class="info-value strong-text">{{ clusterInfo.activeNodes }}</div>
+      <div class="info-value strong-text">{{ totalNodes | titlecase }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">NodeSort Policy</div>
@@ -36,11 +36,11 @@
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Applications</div>
-      <div class="info-value strong-text">{{ clusterInfo.runningApplications }}</div>
+      <div class="info-value strong-text">{{ totalApplications | titlecase }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Containers</div>
-      <div class="info-value strong-text">{{ clusterInfo.runningContainers }}</div>
+      <div class="info-value strong-text">{{ totalContainers | titlecase }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Partition</div>
