--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,13 @@
         <span>Nodes</span>
       </a>
     </li>
+    <li routerLinkActive="active">
+      <a routerLink="/status">
+        <i class="fa fa-caret-right"></i>
+        <i class="fa fa-thermometer-full"></i>
+        <span>Status</span>
+      </a>
+    </li>
   </ul>
   <div class="expander" (click)="toggleNavigation()">
     <i class="fa fa-angle-double-left"></i>
