local-developer visialization

--- a/src/app/components/status-view/status-view.component.html
+++ b/src/app/components/status-view/status-view.component.html
@@ -6,6 +6,7 @@
                     Healthy
                 </mat-panel-title>
                 <mat-panel-description>
+                    Scheduler status
                     <ng-container *ngIf="CurrentSchedulerHealth.Healthy; else SomethingHappens">
                         <mat-icon> thumb_up_alt </mat-icon>
                     </ng-container>
