--- a/src/app/components/status-view/status-view.component.html
+++ b/src/app/components/status-view/status-view.component.html
@@ -1,44 +1,4 @@
 <div>
-    <mat-accordion>
-        <ng-container *ngIf="CurrentSchedulerHealth; else FailToConnection">
-            <mat-expansion-panel>
-                <mat-panel-title>
-                    Healthy
-                </mat-panel-title>
-                <mat-panel-description>
-                    Scheduler status
-                    <ng-container *ngIf="CurrentSchedulerHealth.Healthy; else SomethingHappens">
-                        <mat-icon> thumb_up_alt </mat-icon>
-                    </ng-container>
-                </mat-panel-description>
-            </mat-expansion-panel>
-            <mat-expansion-panel hideToggle *ngFor="let healthCheck of CurrentSchedulerHealth.HealthChecks">
-                <mat-panel-title>
-                    {{ healthCheck.Name }}
-                </mat-panel-title>
-                <mat-panel-description>
-                    {{ healthCheck.Description }}
-                    <ng-container *ngIf="CurrentSchedulerHealth.Healthy; else SomethingHappens">
-                        <mat-icon> thumb_up_alt </mat-icon>
-                    </ng-container>
-                </mat-panel-description>
-                <p> {{ healthCheck.DiagnosisMessage }} </p>
-            </mat-expansion-panel>
-        </ng-container>
-    </mat-accordion>
+    <h3>Entrypoint healthCheck</h3>
+    <app-healthchecks [schedulerHealth]="CurrentSchedulerHealth"></app-healthchecks>
 </div>
-
-<ng-template #FailToConnection>
-    <mat-expansion-panel>
-        <mat-panel-title>
-            Scheduler Connection
-        </mat-panel-title>
-        <mat-panel-description>
-            <mat-icon>error_outline</mat-icon>
-        </mat-panel-description>
-    </mat-expansion-panel>
-</ng-template>
-
-<ng-template #SomethingHappens >
-    <mat-icon> running_with_errors </mat-icon>
-</ng-template>
