--- a/src/app/healthchecks/healthchecks.component.scss
+++ b/src/app/healthchecks/healthchecks.component.scss
@@ -1,3 +1,5 @@
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
 .example-headers-align .mat-expansion-panel-header-title,
 .example-headers-align .mat-expansion-panel-header-description {
   flex-basis: 0;
