--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -27,6 +27,18 @@
       <div class="info-value strong-text">{{ clusterInfo.clusterStatus }}</div>
     </div>
     <div class="flex-primary">
+      <div class="text-uppercase light-text">Build Date</div>
+      <div class="info-value strong-text">{{ clusterInfo.rmBuildInformation[0].buildDate }}</div>
+    </div>
+    <div class="flex-primary">
+      <div class="text-uppercase light-text">Build Version</div>
+      <div class="info-value strong-text">{{ clusterInfo.rmBuildInformation[0].buildVersion }}</div>
+    </div>
+    <div class="flex-primary">
+      <div class="text-uppercase light-text">RM Id</div>
+      <div class="info-value strong-text">{{ clusterInfo.rmBuildInformation[0].rmId }}</div>
+    </div>
+    <div class="flex-primary">
       <div class="text-uppercase light-text">Nodes</div>
       <div class="info-value strong-text">{{ totalNodes | titlecase }}</div>
     </div>
