--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -28,15 +28,15 @@
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Build Date</div>
-      <div class="info-value strong-text">{{ clusterInfo.rmBuildInformation[0].buildDate }}</div>
+      <div class="info-value strong-text">{{ buildInfo.buildDate }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Build Version</div>
-      <div class="info-value strong-text">{{ clusterInfo.rmBuildInformation[0].buildVersion }}</div>
+      <div class="info-value strong-text">{{ buildInfo.buildVersion }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">RM Id</div>
-      <div class="info-value strong-text">{{ clusterInfo.rmBuildInformation[0].rmId }}</div>
+      <div class="info-value strong-text">{{ buildInfo.rmId }}</div>
     </div>
     <div class="flex-primary">
       <div class="text-uppercase light-text">Nodes</div>
