--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -61,6 +61,23 @@
   </div>
 </mat-card>
 
+<mat-card *ngIf="buildInfo">
+  <div class="flex-grid">
+    <div class="flex-primary">
+      <div class="text-uppercase light-text">Build Date</div>
+      <div class="info-value strong-text">{{ buildInfo.buildDate }}</div>
+    </div>
+    <div class="flex-primary">
+      <div class="text-uppercase light-text">Build Version</div>
+      <div class="info-value strong-text">{{ buildInfo.buildVersion }}</div>
+    </div>
+    <div class="flex-primary">
+      <div class="text-uppercase light-text">RM Id</div>
+      <div class="info-value strong-text">{{ buildInfo.rmId }}</div>
+    </div>
+  </div>
+</mat-card>
+
 <div class="cluster-info">
   <div class="flex-grid">
     <div class="left-col flex-primary">
