--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -27,18 +27,6 @@
       <div class="info-value strong-text">{{ clusterInfo.clusterStatus }}</div>
     </div>
     <div class="flex-primary">
-      <div class="text-uppercase light-text">Build Date</div>
-      <div class="info-value strong-text">{{ buildInfo.buildDate }}</div>
-    </div>
-    <div class="flex-primary">
-      <div class="text-uppercase light-text">Build Version</div>
-      <div class="info-value strong-text">{{ buildInfo.buildVersion }}</div>
-    </div>
-    <div class="flex-primary">
-      <div class="text-uppercase light-text">RM Id</div>
-      <div class="info-value strong-text">{{ buildInfo.rmId }}</div>
-    </div>
-    <div class="flex-primary">
       <div class="text-uppercase light-text">Nodes</div>
       <div class="info-value strong-text">{{ totalNodes | titlecase }}</div>
     </div>
@@ -58,22 +46,32 @@
       <div class="text-uppercase light-text">Partition</div>
       <div class="info-value strong-text">{{ partitionName | titlecase }}</div>
     </div>
-  </div>
-</mat-card>
-
-<mat-card *ngIf="buildInfo">
-  <div class="flex-grid">
-    <div class="flex-primary">
-      <div class="text-uppercase light-text">Build Date</div>
-      <div class="info-value strong-text">{{ buildInfo.buildDate }}</div>
-    </div>
-    <div class="flex-primary">
-      <div class="text-uppercase light-text">Build Version</div>
-      <div class="info-value strong-text">{{ buildInfo.buildVersion }}</div>
-    </div>
-    <div class="flex-primary">
-      <div class="text-uppercase light-text">RM Id</div>
-      <div class="info-value strong-text">{{ buildInfo.rmId }}</div>
+    <div class="info-card">
+      <button
+        class="menu-trigger"
+        mat-icon-button
+        matTooltip="More Info"
+        matTooltipShowDelay="500"
+        [matMenuTriggerFor]="InfoCard"
+      >
+        <i class="fa fa-info"></i>
+      </button>
+      <mat-menu #InfoCard="matMenu" xPosition="before">
+        <div class="flex-grid about-card">
+          <div class="flex-primary">
+            <div class="text-uppercase light-text">Build Date</div>
+            <div class="info-value strong-text">{{ buildInfo.buildDate }}</div>
+          </div>
+          <div class="flex-primary">
+            <div class="text-uppercase light-text">Build Version</div>
+            <div class="info-value strong-text">{{ buildInfo.buildVersion }}</div>
+          </div>
+          <div class="flex-primary">
+            <div class="text-uppercase light-text">RM Id</div>
+            <div class="info-value strong-text">{{ buildInfo.rmId }}</div>
+          </div>
+        </div>
+      </mat-menu>
     </div>
   </div>
 </mat-card>
