[YUNIKORN-1788] Fix UI styling after Angular 16 update
- Ran Angular 15 MDC migration tool
- Adjusted about / help menus for consistency
- Use healthcheck instead of example class for status page
- Fix inconsitent search box rendering

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -247,6 +247,7 @@ ul.navigation-primary {
 
 .help-menu > .menu-trigger {
   background: transparent;
+  font-size: 14px;
   color: #666;
   border: 1px solid #666;
   outline: none;
