--- a/src/app/components/container-history/container-history.component.html
+++ b/src/app/components/container-history/container-history.component.html
@@ -16,7 +16,7 @@
  * limitations under the License.
  -->
 
-<mat-card class="box-card">
+<mat-card appearance="outlined" class="box-card">
   <mat-card-header>
     <mat-card-title>Container History</mat-card-title>
   </mat-card-header>
