--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
  * limitations under the License.
  -->
 
-<mat-card *ngIf="clusterInfo">
+<mat-card appearance="outlined" *ngIf="clusterInfo">
   <div class="flex-grid">
     <div class="flex-primary">
       <div class="text-uppercase light-text">Name</div>
