--- a/src/app/components/healthchecks/healthchecks.component.html
+++ b/src/app/components/healthchecks/healthchecks.component.html
@@ -16,7 +16,7 @@
  * limitations under the License.
  -->
 
-<mat-accordion class="example-headers-align">
+<mat-accordion class="healthcheck-headers-align">
     <mat-expansion-panel disabled>
         <mat-expansion-panel-header>
             <mat-panel-title>
