--- a/src/app/components/queue-rack/queue-rack.component.scss
+++ b/src/app/components/queue-rack/queue-rack.component.scss
@@ -16,7 +16,7 @@
  * limitations under the License.
  */
 
-.mat-card.queue-item {
+.mat-mdc-card.queue-item {
   max-width: 200px;
   padding: 0;
   margin-bottom: 20px;
