--- a/src/app/components/nodes-view/nodes-view.component.scss
+++ b/src/app/components/nodes-view/nodes-view.component.scss
@@ -33,12 +33,19 @@
     color: #333;
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
+    .mat-res-ul{
+      padding: 0;
+      margin: 0;
+      .mat-res-li{
+        list-style-type: none;
+      }
+    }
     .mat-toggle-more {
       display: block;
       color: #a1a3b7;
-      margin: 10px 0 0 0;
-      padding: 10px 0 0 0;
+      margin: 2px 0 0 0;
+      padding: 5px 0 0 0;
       &:hover {
         color: #8d00d4;
       }
