--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -17,17 +17,32 @@
  -->
 
 <div class="top-part">
-  <label class="part-label">Partition: </label>
-  <mat-form-field>
-    <mat-select
-      [(value)]="partitionSelected"
-      (selectionChange)="onPartitionSelectionChanged($event)"
-    >
-      <mat-option *ngFor="let part of partitionList" [value]="part.value">
-        {{ part.name }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+  <div class="dropdown-wrapper">
+    <label class="part-label">Partition: </label>
+    <mat-form-field>
+      <mat-select
+        [(value)]="partitionSelected"
+        (selectionChange)="onPartitionSelectionChanged($event)"
+      >
+        <mat-option *ngFor="let part of partitionList" [value]="part.value">
+          {{ part.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="btn-wrapper">
+    <button mat-button color="primary" class="mdc-button"
+      (click)="toggle()">
+      <ng-container class="mdc-button__label" *ngIf="!detailToggle">
+        <i class="material-icons mdc-button__icon" aria-hidden="true">visibility</i>
+        <span class="mdc-button__label">Resource oriented view</span>
+      </ng-container>
+      <ng-container class="mdc-button__label" *ngIf="detailToggle">
+        <i class="material-icons mdc-button__icon" aria-hidden="true">visibility_off</i>
+        <span class="mdc-button__label">Hide resource detail</span>
+      </ng-container>
+    </button>
+  </div>
 </div>
 <div class="nodes-view">
   <div class="mat-elevation-z8">
@@ -44,25 +59,23 @@
           <mat-cell *matCellDef="let element">
             <ng-container *ngIf="columnDef.colFormatter; else showNodeRawData">
               <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
-                <ng-container *ngIf="getCellId(element, columnDef.colId) as cellId">
                   <ul class="mat-res-ul">
                     <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
                       <li class="mat-res-li" *ngIf="i<3">
                         {{resource}}
                       </li>
-                      <li class="mat-res-li" *ngIf="i>=3 && getToggle(cellId)">
+                      <li class="mat-res-li" *ngIf="i>=3 && detailToggle">
                         {{resource}}
                       </li>
                     </ng-container>
                   </ul>
                   <span *ngIf="formatResources(colValue).length>3">
                     <a  href="#" 
-                        (click)="$event.preventDefault(); $event.stopPropagation(); toggle(cellId);"
+                        (click)="$event.preventDefault(); $event.stopPropagation(); toggle();"
                         class="mat-toggle-more">
-                        {{ getToggle(cellId) ? 'Less...' : 'More...' }}
+                        {{ detailToggle ? 'Less...' : '....' }}
                     </a>
                   </span>
-                </ng-container>
               </ng-container>
             </ng-container>
             <ng-template #showNodeRawData>
@@ -128,25 +141,23 @@
             <mat-cell *matCellDef="let element">
               <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData">
                 <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
-                  <ng-container *ngIf="getCellId(element, columnDef.colId) as cellId">
                     <ul class="mat-res-ul">
                       <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
                         <li class="mat-res-li" *ngIf="i<3">
                           {{resource}}
                         </li>
-                        <li class="mat-res-li" *ngIf="i>=3 && getToggle(cellId)">
+                        <li class="mat-res-li" *ngIf="i>=3 && detailToggle">
                           {{resource}}
                         </li>
                       </ng-container>
                     </ul>
                     <span *ngIf="formatResources(colValue).length>3">
                       <a  href="#" 
-                          (click)="$event.preventDefault(); $event.stopPropagation(); toggle(cellId);"
+                          (click)="$event.preventDefault(); $event.stopPropagation(); toggle();"
                           class="mat-toggle-more">
-                          {{ getToggle(cellId) ? 'Less...' : 'More...' }}
+                          {{ detailToggle ? 'Less...' : '....' }}
                       </a>
                     </span>
-                  </ng-container>
                 </ng-container>
             </ng-container>
               <ng-template #showAllocRowData>
