--- a/src/app/components/app-node-utilization/app-node-utilization.component.html
+++ b/src/app/components/app-node-utilization/app-node-utilization.component.html
@@ -1,4 +1,4 @@
-/**
+<!--
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -14,35 +14,25 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ -->
 
-import { of } from 'rxjs';
-
-export const noopFn = () => {};
-
-export const MockSchedulerService = {
-  fetchClusterByName: () => of({}),
-  fetchClusterList: () => of([]),
-  fetchPartitionList: () => of([]),
-  fetchSchedulerQueues: () => of({}),
-  fetchAppList: () => of([]),
-  fetchAppHistory: () => of([]),
-  fetchContainerHistory: () => of([]),
-  fetchNodeList: () => of([]),
-  fetchNodeUtilization: () => of([]),
-  fecthHealthchecks: () => of([]),
-};
-
-export const MockNgxSpinnerService = {
-  show: noopFn,
-  hide: noopFn,
-};
-
-export const MockEnvconfigService = {
-  getSchedulerWebAddress: noopFn,
-};
-
-export const MockEventBusService = {
-  getEvent: () => of<any>(),
-  publish: noopFn,
-};
+ <mat-card appearance="outlined" class="box-card">
+    <mat-card-header>
+      <mat-card-title>Nodes Resource Utilization</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="status-wrapper flex-grid">
+        <div class="chart-wrapper flex-primary">
+          <app-donut-chart [data]="chartData"></app-donut-chart>
+        </div>
+        <div class="chart-legend flex-primary">
+          <div *ngFor="let data of chartData">
+            <span class="fa fa-circle" [style.color]="data.color"></span>
+            <span class="legend-label">{{ data.name }}</span>
+            <span class="legend-value">{{ data.value }}</span>
+          </div>
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  
