--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -93,4 +93,9 @@
       <app-container-history [chartData]="containerHistoryData"></app-container-history>
     </div>
   </div>
+  <div class="flex-grid grid-row">
+    <div class="left-col flex-primary">
+      <app-node-utilization [chartData]="nodeUtilizationData" />
+    </div>
+  </div>
 </div>
