--- a/src/app/components/apps-view/apps-view.component.html
+++ b/src/app/components/apps-view/apps-view.component.html
@@ -17,62 +17,57 @@
  -->
 
 <div class="top-section">
-  <div class="dropdown-wrapper">
-    <label class="dropdown-label">Partition: </label>
-    <mat-form-field>
-      <mat-select
-        [(value)]="partitionSelected"
-        (selectionChange)="onPartitionSelectionChanged($event)"
+  <div class="left-side">
+    <div class="dropdown-wrapper">
+      <label class="dropdown-label">Partition: </label>
+      <mat-form-field>
+        <mat-select
+          [(value)]="partitionSelected"
+          (selectionChange)="onPartitionSelectionChanged($event)"
+        >
+          <mat-option *ngFor="let part of partitionList" [value]="part.value">
+            {{ part.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="dropdown-wrapper">
+      <label class="dropdown-label">Queue: </label>
+      <mat-form-field>
+        <mat-select [(value)]="leafQueueSelected" (selectionChange)="onQueueSelectionChanged($event)">
+          <mat-option *ngFor="let queue of leafQueueList" [value]="queue.value">
+            {{ queue.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="right-side">
+    <mat-form-field class="search-wrapper white-mat-form-field">
+      <input
+        matInput
+        type="text"
+        [(ngModel)]="searchText"
+        placeholder="Search By Application ID"
+        #searchInput
+      />
+      <button
+        class="clear-btn"
+        *ngIf="searchText"
+        (click)="onClearSearch()"
+        matTooltip="Clear Search"
+        matTooltipShowDelay="500"
       >
-        <mat-option *ngFor="let part of partitionList" [value]="part.value">
-          {{ part.name }}
-        </mat-option>
-      </mat-select>
+        <i class="far fa-times-circle"></i>
+      </button>
+      <i *ngIf="!searchText" class="fas fa-search search-icon"></i>
     </mat-form-field>
+    <div class="btn-wrapper">
+      <button class="btn" (click)="toggle()" [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'">
+        <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54' ">more_horiz</i>
+      </button>
+    </div>
   </div>
-  <div class="dropdown-wrapper">
-    <label class="dropdown-label">Queue: </label>
-    <mat-form-field>
-      <mat-select [(value)]="leafQueueSelected" (selectionChange)="onQueueSelectionChanged($event)">
-        <mat-option *ngFor="let queue of leafQueueList" [value]="queue.value">
-          {{ queue.name }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
-  <div class="btn-wrapper">
-    <button mat-button color="primary" class="mdc-button"
-      (click)="toggle()">
-      <ng-container class="mdc-button__label" *ngIf="detailToggle">
-        <i class="material-icons mdc-button__icon" aria-hidden="true">visibility</i>
-        <span class="mdc-button__label">Resource oriented view</span>
-      </ng-container>
-      <ng-container class="mdc-button__label" *ngIf="!detailToggle">
-        <i class="material-icons mdc-button__icon" aria-hidden="true">visibility_off</i>
-        <span class="mdc-button__label">Hide resource detail</span>
-      </ng-container>
-    </button>
-  </div>
-  
-  <mat-form-field class="search-wrapper white-mat-form-field">
-    <input
-      matInput
-      type="text"
-      [(ngModel)]="searchText"
-      placeholder="Search By Application ID"
-      #searchInput
-    />
-    <button
-      class="clear-btn"
-      *ngIf="searchText"
-      (click)="onClearSearch()"
-      matTooltip="Clear Search"
-      matTooltipShowDelay="500"
-    >
-      <i class="far fa-times-circle"></i>
-    </button>
-    <i *ngIf="!searchText" class="fas fa-search search-icon"></i>
-  </mat-form-field>
 </div>
 <div class="apps-view">
   <div class="mat-elevation-z8">
@@ -91,21 +86,14 @@
                 <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
                   <ul class="mat-res-ul">
                     <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
-                      <li class="mat-res-li" *ngIf="i<3">
+                      <li class="mat-res-li" *ngIf="i<2">
                         {{resource}}
                       </li>
-                      <li class="mat-res-li" *ngIf="i>=3 && detailToggle">
+                      <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
                         {{resource}}
                       </li>
                     </ng-container>
                   </ul>
-                  <span *ngIf="formatResources(colValue).length>3">
-                    <a  href="#" 
-                        (click)="$event.preventDefault(); $event.stopPropagation(); toggle();"
-                        class="mat-toggle-more">
-                        {{ detailToggle ? 'Less...' : '....' }}
-                    </a>
-                  </span>
                 </ng-container>
               </ng-container>
               <ng-template #showAppRawData>
@@ -182,21 +170,14 @@
                 <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
                     <ul class="mat-res-ul">
                       <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
-                        <li class="mat-res-li" *ngIf="i<3">
+                        <li class="mat-res-li" *ngIf="i<2">
                           {{resource}}
                         </li>
-                        <li class="mat-res-li" *ngIf="i>=3 && detailToggle">
+                        <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
                           {{resource}}
                         </li>
                       </ng-container>
                     </ul>
-                    <span *ngIf="formatResources(colValue).length>3">
-                      <a  href="#" 
-                          (click)="$event.preventDefault(); $event.stopPropagation(); toggle();"
-                          class="mat-toggle-more">
-                          {{ detailToggle ? 'Less...' : '....' }}
-                      </a>
-                    </span>
                 </ng-container>
               </ng-container>
               <ng-template #showAllocRowData>
