--- a/src/app/components/apps-view/apps-view.component.scss
+++ b/src/app/components/apps-view/apps-view.component.scss
@@ -22,46 +22,70 @@
   height: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  .search-wrapper {
-    width: 300px;
-    position: absolute;
-    right: 20px;
-    input {
-      width: calc(100% - 22px);
-      color: #333;
-    }
-    .clear-btn {
-      outline: none;
-      border: none;
-      padding: 0 0 0 4px;
-      cursor: pointer;
-      background: transparent;
-      i {
-        font-size: 18px;
-        &:hover {
-          color: #f44336;
-        }
+  .left-side{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .dropdown-wrapper {
+      padding-right: 40px;
+      .dropdown-label {
+        color: #333;
+        font-size: 1.2em;
+        margin-right: 10px;
       }
     }
-    .search-icon {
-      margin-left: 4px;
-      font-size: 17px;
-    }
   }
-  .dropdown-wrapper {
-    padding-right: 40px;
-    .dropdown-label {
-      color: #333;
-      font-size: 1.2em;
-      margin-right: 10px;
+  .right-side{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .btn-wrapper {
+      filter: drop-shadow(0px 2px 1px rgba(90, 90, 90, 0.5));
+      &:hover{
+        filter: drop-shadow(0px 3px 3px rgba(90, 90, 90, 0.5));
+      }
+      :hover{
+        cursor: pointer;
+      }
+      .btn{
+        display: block;
+        border: none;
+        padding: 13px 24px;
+        border-radius: 5px;
+        font-size: 24px;
+        transform: translateY(-13px);
+      }
+      .material-icons{
+        transform: translateY(2px);
+      }
     }
-  }
-  .btn-wrapper{
-    ::ng-deep .mdc-button__label{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
+    .search-wrapper {
+      width: 300px;
+      right: 20px;
+      padding-right: 20px;
+      input {
+        width: calc(100% - 22px);
+        color: #333;
+      }
+      .clear-btn {
+        outline: none;
+        border: none;
+        padding: 0 0 0 4px;
+        cursor: pointer;
+        background: transparent;
+        i {
+          font-size: 18px;
+          &:hover {
+            color: #f44336;
+          }
+        }
+      }
+      .search-icon {
+        margin-left: 4px;
+        font-size: 17px;
+      }
     }
   }
 }
