--- a/src/app/components/nodes-view/nodes-view.component.scss
+++ b/src/app/components/nodes-view/nodes-view.component.scss
@@ -19,6 +19,7 @@
 
 .top-part{
   display: flex;
+  justify-content: space-between;
   align-items: center;
   .dropdown-wrapper{
     padding-right: 40px;
@@ -28,11 +29,24 @@
       margin-right: 10px;
     }
   }
-  .btn-wrapper{
-    ::ng-deep .mdc-button__label{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
+  .btn-wrapper {
+    filter: drop-shadow(0px 2px 1px rgba(90, 90, 90, 0.5));
+    &:hover{
+      filter: drop-shadow(0px 3px 3px rgba(90, 90, 90, 0.5));
+    }
+    :hover{
+      cursor: pointer;
+    }
+    .btn{
+      display: block;
+      border: none;
+      padding: 13px 24px;
+      border-radius: 5px;
+      font-size: 24px;
+      transform: translateY(-13px);
+    }
+    .material-icons{
+      transform: translateY(2px);
     }
   }
 }
