--- a/src/app/components/apps-view/apps-view.component.html
+++ b/src/app/components/apps-view/apps-view.component.html
@@ -17,48 +17,57 @@
  -->
 
 <div class="top-section">
-  <div class="dropdown-wrapper">
-    <label class="dropdown-label">Partition: </label>
-    <mat-form-field>
-      <mat-select
-        [(value)]="partitionSelected"
-        (selectionChange)="onPartitionSelectionChanged($event)"
+  <div class="left-side">
+    <div class="dropdown-wrapper">
+      <label class="dropdown-label">Partition: </label>
+      <mat-form-field>
+        <mat-select
+          [(value)]="partitionSelected"
+          (selectionChange)="onPartitionSelectionChanged($event)"
+        >
+          <mat-option *ngFor="let part of partitionList" [value]="part.value">
+            {{ part.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="dropdown-wrapper">
+      <label class="dropdown-label">Queue: </label>
+      <mat-form-field>
+        <mat-select [(value)]="leafQueueSelected" (selectionChange)="onQueueSelectionChanged($event)">
+          <mat-option *ngFor="let queue of leafQueueList" [value]="queue.value">
+            {{ queue.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="right-side">
+    <mat-form-field class="search-wrapper white-mat-form-field">
+      <input
+        matInput
+        type="text"
+        [(ngModel)]="searchText"
+        placeholder="Search By Application ID"
+        #searchInput
+      />
+      <button
+        class="clear-btn"
+        *ngIf="searchText"
+        (click)="onClearSearch()"
+        matTooltip="Clear Search"
+        matTooltipShowDelay="500"
       >
-        <mat-option *ngFor="let part of partitionList" [value]="part.value">
-          {{ part.name }}
-        </mat-option>
-      </mat-select>
+        <i class="far fa-times-circle"></i>
+      </button>
+      <i *ngIf="!searchText" class="fas fa-search search-icon"></i>
     </mat-form-field>
+    <div class="btn-wrapper">
+      <button class="btn" (click)="toggle()" [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'">
+        <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54' ">more_horiz</i>
+      </button>
+    </div>
   </div>
-  <div class="dropdown-wrapper">
-    <label class="dropdown-label">Queue: </label>
-    <mat-form-field>
-      <mat-select [(value)]="leafQueueSelected" (selectionChange)="onQueueSelectionChanged($event)">
-        <mat-option *ngFor="let queue of leafQueueList" [value]="queue.value">
-          {{ queue.name }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
-  <mat-form-field class="search-wrapper white-mat-form-field">
-    <input
-      matInput
-      type="text"
-      [(ngModel)]="searchText"
-      placeholder="Search By Application ID"
-      #searchInput
-    />
-    <button
-      class="clear-btn"
-      *ngIf="searchText"
-      (click)="onClearSearch()"
-      matTooltip="Clear Search"
-      matTooltipShowDelay="500"
-    >
-      <i class="far fa-times-circle"></i>
-    </button>
-    <i *ngIf="!searchText" class="fas fa-search search-icon"></i>
-  </mat-form-field>
 </div>
 <div class="apps-view">
   <div class="mat-elevation-z8">
@@ -78,7 +87,18 @@
           <ng-container *ngIf="columnDef.colId === 'usedResource'; else renderNext_1">
             <mat-cell *matCellDef="let element">
               <ng-container *ngIf="columnDef.colFormatter; else showAppRawData">
-                <span [innerHTML]="columnDef.colFormatter(element[columnDef.colId])"></span>
+                <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+                  <ul class="mat-res-ul">
+                    <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
+                      <li class="mat-res-li" *ngIf="i<2">
+                        {{resource}}
+                      </li>
+                      <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
+                        {{resource}}
+                      </li>
+                    </ng-container>
+                  </ul>
+                </ng-container>
               </ng-container>
               <ng-template #showAppRawData>
                 <span>{{ element[columnDef.colId] }}</span>
@@ -150,8 +170,19 @@
 
           <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_3">
             <mat-cell *matCellDef="let element">
-              <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData">
-                <span [innerHTML]="columnDef.colFormatter(element[columnDef.colId])"></span>
+              <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData;">
+                <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+                    <ul class="mat-res-ul">
+                      <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
+                        <li class="mat-res-li" *ngIf="i<2">
+                          {{resource}}
+                        </li>
+                        <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
+                          {{resource}}
+                        </li>
+                      </ng-container>
+                    </ul>
+                </ng-container>
               </ng-container>
               <ng-template #showAllocRowData>
                 <span>{{ element[columnDef.colId] }}</span>
