--- a/src/app/components/apps-view/apps-view.component.scss
+++ b/src/app/components/apps-view/apps-view.component.scss
@@ -15,45 +15,84 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 
-.top-section {
+ .top-section {
   width: 100%;
   height: 100%;
   display: flex;
-  .search-wrapper {
-    width: 300px;
-    position: absolute;
-    right: 20px;
-    input {
-      width: calc(100% - 22px);
-      color: #333;
-    }
-    .clear-btn {
-      outline: none;
-      border: none;
-      padding: 0 0 0 4px;
-      cursor: pointer;
-      background: transparent;
-      i {
-        font-size: 18px;
-        &:hover {
-          color: #f44336;
-        }
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  .left-side{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .dropdown-wrapper {
+      padding-right: 40px;
+      .dropdown-label {
+        color: #333;
+        font-size: 1.2em;
+        margin-right: 10px;
       }
     }
-    .search-icon {
-      margin-left: 4px;
-      font-size: 17px;
+  }
+  .right-side{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .btn-wrapper {
+      filter: drop-shadow(0px 2px 1px rgba(90, 90, 90, 0.5));
+      &:hover{
+        filter: drop-shadow(0px 3px 3px rgba(90, 90, 90, 0.5));
+      }
+      :hover{
+        cursor: pointer;
+      }
+      .btn{
+        display: block;
+        border: none;
+        padding: 13px 24px;
+        border-radius: 5px;
+        font-size: 24px;
+        transform: translateY(-13px);
+      }
+      .material-icons{
+        transform: translateY(2px);
+      }
+    }
+    .search-wrapper {
+      width: 300px;
+      right: 20px;
+      padding-right: 20px;
+      input {
+        width: calc(100% - 22px);
+        color: #333;
+      }
+      .clear-btn {
+        outline: none;
+        border: none;
+        padding: 0 0 0 4px;
+        cursor: pointer;
+        background: transparent;
+        i {
+          font-size: 18px;
+          &:hover {
+            color: #f44336;
+          }
+        }
+      }
+      .search-icon {
+        margin-left: 4px;
+        font-size: 17px;
+      }
     }
   }
-  .dropdown-wrapper {
-    padding-right: 40px;
-    .dropdown-label {
-      color: #333;
-      font-size: 1.2em;
-      margin-right: 10px;
-    }
-  }
+}
+
+.mdc-button .mdc-button__label{
+  display: flex;
+  align-items: center;
 }
 
 .apps-view {
@@ -66,6 +105,24 @@
   }
   .mat-mdc-cell {
     color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    .mat-res-ul{
+      padding: 0;
+      margin: 0;
+      .mat-res-li{
+        list-style-type: none;
+      }
+    }
+    .mat-toggle-more {
+      display: block;
+      color: #a1a3b7;
+      padding: 5px 45px 0 0;
+      &:hover {
+        color: #8d00d4;
+      }
+    }
   }
   .mat-mdc-row {
     &:hover {
@@ -76,6 +133,12 @@
       background: #303d54;
       .mat-mdc-cell {
         color: #fff;
+        .mat-toggle-more {
+          color: #b8bbff;
+          &:hover {
+            color: #b871dc;
+          }
+        }
       }
     }
   }
