--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -17,17 +17,24 @@
  -->
 
 <div class="top-part">
-  <label class="part-label">Partition: </label>
-  <mat-form-field>
-    <mat-select
-      [(value)]="partitionSelected"
-      (selectionChange)="onPartitionSelectionChanged($event)"
-    >
-      <mat-option *ngFor="let part of partitionList" [value]="part.value">
-        {{ part.name }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+  <div class="dropdown-wrapper">
+    <label class="part-label">Partition: </label>
+    <mat-form-field>
+      <mat-select
+        [(value)]="partitionSelected"
+        (selectionChange)="onPartitionSelectionChanged($event)"
+      >
+        <mat-option *ngFor="let part of partitionList" [value]="part.value">
+          {{ part.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="btn-wrapper">
+    <button class="btn" (click)="toggle()" [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'">
+      <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54' ">more_horiz</i>
+    </button>
+  </div>
 </div>
 <div class="nodes-view">
   <div class="mat-elevation-z8">
@@ -43,7 +50,18 @@
         >
           <mat-cell *matCellDef="let element">
             <ng-container *ngIf="columnDef.colFormatter; else showNodeRawData">
-              <span [innerHTML]="columnDef.colFormatter(element[columnDef.colId])"></span>
+              <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+                  <ul class="mat-res-ul">
+                    <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
+                      <li class="mat-res-li" *ngIf="i<2">
+                        {{resource}}
+                      </li>
+                      <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
+                        {{resource}}
+                      </li>
+                    </ng-container>
+                  </ul>
+              </ng-container>
             </ng-container>
             <ng-template #showNodeRawData>
               <span>{{ element[columnDef.colId] }}</span>
@@ -107,8 +125,19 @@
           <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_2">
             <mat-cell *matCellDef="let element">
               <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData">
-                <span [innerHTML]="columnDef.colFormatter(element[columnDef.colId])"></span>
-              </ng-container>
+                <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+                    <ul class="mat-res-ul">
+                      <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
+                        <li class="mat-res-li" *ngIf="i<2">
+                          {{resource}}
+                        </li>
+                        <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
+                          {{resource}}
+                        </li>
+                      </ng-container>
+                    </ul>
+                </ng-container>
+            </ng-container>
               <ng-template #showAllocRowData>
                 <span>{{ element[columnDef.colId] }}</span>
               </ng-template>
